# tinyai

./: .gitmodules  CMakeLists.txt
experiments/: CMakeLists.txt
experiments/racing/: CMakeLists.txt  main.cpp
experiments/racing/SFML/: CMakeLists.txt
experiments/racing/SFML/src/SFML/Graphics/: Font.cpp
experiments/xor/: CMakeLists.txt  xor.cpp
src/: CMakeLists.txt  tinyann.cpp  tinyann.h  tinyneat.cpp  tinyneat.h
